# ai-personalized-medicine

./: .env.example  .gitignore  README.MD  pyproject.toml  requirements.txt
.streamlit/: config.toml
backend/: config.py  llm.py
backend/agents/: __init__.py  agent.py  guardrails.py  prompts.py  tools.py
backend/api/: main.py
backend/api/routes/: chat.py  knowledge.py  patients.py
backend/db/: __init__.py  engine.py  init_db.py  session.py
backend/ingestion/: csv_parser.py  pdf_parser.py
backend/ml/: __init__.py  features.py  predict.py  train.py
backend/models/: __init__.py  enums.py  orm.py  schemas.py
backend/rag/: __init__.py  chunker.py  embedder.py  index.py  patient_docs.py  qa.py  retriever.py  store.py
data/: knowledge_topics.json
data/knowledge/: ATTRIBUTION.md  bmi.md  fasting_glucose.md  hba1c.md  hdl_cholesterol.md  hypertension.md  ldl_cholesterol.md  manifest.json  metabolic_syndrome.md  obesity.md  total_cholesterol.md  triglycerides.md  type2_diabetes.md
docker/: docker-compose.yaml
frontend/: app.py
scripts/: fetch_knowledge.py  generate_synthetic_patients.py  seed_db.py
tests/: conftest.py  test_agent.py  test_api.py  test_chat_api.py  test_eval.py  test_ingestion.py  test_knowledge_api.py  test_knowledge_fetch.py  test_llm.py  test_ml.py  test_models.py  test_patient_rag.py  test_patients_api.py  test_pdf_parser.py  test_rag.py  test_synthetic.py
web/: .env.example  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo
web/src/: App.tsx  index.css
(+21 files in other folders)
