[project]
name = "ai-personalized-medicine"
version = "0.1.0"
description = "Educational Python project for AI-powered personalized healthcare"
readme = "README.MD"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy>=2.0.36",
    "psycopg2-binary>=2.9.10",
    "pandas>=2.2.0",
    "numpy>=2.0.0",
    "streamlit>=1.40.0",
    "httpx>=0.28.0",
    "python-multipart>=0.0.18",
    "pdfplumber>=0.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.8.0",
    "ipython>=8.30.0",
    "jupyter>=1.1.0",
]
ml = [
    "scikit-learn>=1.6.0",
    "xgboost>=2.1.0",
]
ai = [
    "openai>=1.50.0",
    "langgraph>=0.2.0",
    "langchain-openai>=0.2.0",
    "chromadb>=0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
